# Portfolio

1-hypertuning-gridsearch/: Grid search findings  Gridsearch.docx  gridsearch appendix.docx  summary.md
2-hypertuning-mlflow/: summary.md
3-hypertuning-rnn/: notebook.ipynb  summary.md
4_tuning_networks/: 01_hypertuner.ipynb  02_ray.ipynb  03_minimal_transfer_learning.ipynb  05_hypertuning_exercise_summary.md  Hypertuning_exercise_V3.ipynb  best_hyperparameters.json  hpt.txt  hypertune_exercise_2.ipynb  hypertuning_exercise.ipynb  optuna_trials_results.csv
5-deployment/: summary.md
7-ethics/: Ethics model comparison.docx  Portfolio assignment Ethics 2 Reinder Weenink (1).docx  Portfolio assignment Ethics 2 Reinder Weenink.docx
batProject/: batProject.code-workspace  bats.ipynb  main.py  pyproject.toml
